@@ -1,0 +1,49 @@
+-----BEGIN CERTIFICATE-----
+MIID0jCCArqgAwIBAgIBADANBgkqhkiG9w0BAQUFADBUMQswCQYDVQQGEwJKUDEp
+MCcGA1UEChMgU29ueSBDb21wdXRlciBFbnRlcnRhaW5tZW50IEluYy4xGjAYBgNV
+BAMTEVNDRUkgRE5BUyBSb290IDA1MB4XDTA0MDcxMjA5MDExOVoXDTM3MTIwNjA5
+MDExOVowVDELMAkGA1UEBhMCSlAxKTAnBgNVBAoTIFNvbnkgQ29tcHV0ZXIgRW50
+ZXJ0YWlubWVudCBJbmMuMRowGAYDVQQDExFTQ0VJIEROQVMgUm9vdCAwNTCCASIw
+DQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBANmPeza8PwCqlI7esOGIkoSESnIN
+g72ZD3Ut63jy7SdothPIvGBqVZWYkIpqJYJd1I4Nh//IpXQCQL0PnJLrh9BBeowq
+Muf5NNq3Us80Ihiu9CvNEAEO18g3OFV1TYdSwQ5zUsk33OUeI7h4aBPDVcZXYeHt
+dbPLqe4K8igian5prrAD5S6h28t8aAm+qMWRo+bW25B/841XwDGBP7/IxZv8Yoio
+rCo80CVYe6lGoU08eeqQiaHI5zAF281DWZSoVfLjJUEWmEnxqr8aOhszRGePi+Ei
+7UQjHDuZX9rLhDI1zAND+BA259tn/iwOqVXe20OccJllHJcG4Ecmd98f5qMCAwEA
+AaOBrjCBqzAdBgNVHQ4EFgQUxlahM1tPzoN3YgVEhm0gV7Wv2twwfAYDVR0jBHUw
+c4AUxlahM1tPzoN3YgVEhm0gV7Wv2tyhWKRWMFQxCzAJBgNVBAYTAkpQMSkwJwYD
+VQQKEyBTb255IENvbXB1dGVyIEVudGVydGFpbm1lbnQgSW5jLjEaMBgGA1UEAxMR
+U0NFSSBETkFTIFJvb3QgMDWCAQAwDAYDVR0TBAUwAwEB/zANBgkqhkiG9w0BAQUF
+AAOCAQEACZPihjwXA27wJ03tEKcHAeFLi8aBw2ysH4GwuH1dWb3UpuznWOB0iQT1
+wQocnEFYCJx5XFEnj4aLWpSHLEq/sSO+my+aPoTEsy20ajF+YLYZm0bZxH50CJYh
+rkET4C2aC0XvhGp9k1JQ1o0W6+cFT5LTlXapsq8Btt31t+XDPX7RqGV4WGekt3hM
+T7xRc7JWXdAQijIrbYi8mtbM07KEGnPU6IT8C47+0mSurpwLOoWL1tPgo6ePpLNi
+c4quUMgh9RXVjeTyXOMmyYdeUm2gt7qErvQONli+6Epmhm0A2khpIMHSpQjTE8gV
+rZp42a6+zg1iYy2vFBOmiQ17GRUl0A==
+-----END CERTIFICATE-----
+-----BEGIN CERTIFICATE-----
+MIIEUjCCAzqgAwIBAgICDPowDQYJKoZIhvcNAQEFBQAwVDELMAkGA1UEBhMCSlAx
+KTAnBgNVBAoTIFNvbnkgQ29tcHV0ZXIgRW50ZXJ0YWlubWVudCBJbmMuMRowGAYD
+VQQDExFTQ0VJIEROQVMgUm9vdCAwNTAeFw0xNzA5MjIwNTQ0MTJaFw0yMDA5MjEw
+NTQ0MTJaMIG0MQswCQYDVQQGEwJKUDEOMAwGA1UECAwFVG9reW8xEjAQBgNVBAcM
+CU1pbmF0by1rdTEsMCoGA1UECgwjU29ueSBJbnRlcmFjdGl2ZSBFbnRlcnRhaW5t
+ZW50IEluYy4xLjAsBgNVBAsMJU5ldHdvcmsgRW5naW5lZXJpbmcgJiBPcGVyYXRp
+b24gRGVwdC4xIzAhBgNVBAMMGioud3cubnAuZGwucGxheXN0YXRpb24ubmV0MIIB
+IjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAq7zQRgxIISeHNLtVQblA8R2c
+bTpmaspQFYYWSbNymDvApi29YkxxfTYYwgsIyEziHowahZWzqVEKIvSMr43sOYA2
+R4fMIevbztHY+UcFdDgzJtthxnhgmJR+ntzLr72JxIKc3SH4nP28maHLmR230BS9
+x7OmHx3RcSgc9nGgaT6P+SIB5bIpZXedlNp9jS9SAX+scVE5feqYEjA+o76IXDBM
+HU8Y7rVFl/nE/qSZRfA9zTBS/aX7BeUL7epyB/bKFfpdq1s8Jxv00G0DpbPIiVvD
+HpKca8h49QUo1xM74OiFPEqOaMDBrV9YXE9EmcezPtQzzOPaw2+zFUEDqMv7mwID
+AQABo4HMMIHJMAkGA1UdEwQCMAAwHwYJYIZIAYb4QgENBBIWEEROQVMgQ2VydGlm
+aWNhdGUwHQYDVR0OBBYEFAwiSPzSFE0Y/S6ay4MajjnJuADrMHwGA1UdIwR1MHOA
+FMZWoTNbT86Dd2IFRIZtIFe1r9rcoVikVjBUMQswCQYDVQQGEwJKUDEpMCcGA1UE
+ChMgU29ueSBDb21wdXRlciBFbnRlcnRhaW5tZW50IEluYy4xGjAYBgNVBAMTEVND
+RUkgRE5BUyBSb290IDA1ggEAMA0GCSqGSIb3DQEBBQUAA4IBAQBcNMiLeaRuc0Gv
+lhNfIFv9p/tOQkPt0bSjG4bhWqXPbXhXVJwI1SQ/2+3+wlGG3suo3ztVwQocWix6
+zGO0m3hwPUunzJAov5RtvRfndHxYF2fSjqIDnOr8ppA9W7VTqgBgfyRAspQf8iTU
++dYgnUzE3w1JngxHAHsObcsJAgwLDgDjshb078cY6lQzX66G/TVP6mHjZN9U2Mr1
+SMBpOvGlMzopVvBUecn45kGnNzwVC/VYdMw1JMa/Q4IdpjFq+Y444N3z3BH4UUru
+CGZvT2MSWFdcu2QFQAMCJaA+7eOfz+aM72QfSEtNUeyVB7kq2P+WX/OUMe4TiU7n
+PlH3VCy0
+-----END CERTIFICATE-----
