@@ -3,6 +3,8 @@
 - bugfix
 
 future release (aka current master branch):
+!  refactored gui code
+!  more secure handling of sonys self signed certificate
 
 v007:
 -  fixed main window becoming malfunctional when pressing download in the queue window with an empty queue
